tdf#166781: Emit correct expected token on missing End If

Change-Id: I28fc1822d80c45416204f56a5763a804b2b1f5a8
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/185999
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>